Setting up .env file error
