# server/src/routes/user.route.js
@@ -1,10 +1,13 @@
 const router = require('express').Router();
 const mongoose = require('mongoose');
 const Poll = require('../model/Poll');
+const User = require('../model/User');
 const redis = require('redis');
+const Pusher = require("pusher");
 
 const { 
-  createPollDetails
+  createPollDetails,
+  deletePollDetail
 } = require('../helpers/inputChecker');
 
 
@@ -20,6 +23,15 @@ client.on('error', (err) => {
 
 client.on('connect', () => {
   console.log("Redis Connected");
+});
+
+
+const pusher = new Pusher({
+  appId: "1077643",
+  key: "ec46cbf6ef376f98cd70",
+  secret: "9040bdaab97ba41ad603",
+  cluster: "eu",
+  useTLS: true
 });
 
 
@@ -56,6 +68,10 @@ router.post('/poll/create', async (req, res) => {
 
   try {
     const savedPoll = await poll.save();
+
+    // Update totalPollCreated field in user collection
+    await User.updateOne({ _id: req.body.createdBy }, { $inc: {totalPollCreated: 1} });
+
     return res.status(200).json({
       status: true,
       message: "Poll created successfully",
@@ -98,13 +114,11 @@ router.get('/polls/userID/:userID', async (req, res) => {
 router.get('/poll/pollID/:pollID', async (req, res) => {
   try {
     const pollData = await Poll.findOne({ _id: req.params.pollID });
-
     if (pollData) {
       // return the result to the client
       return res.status(200).json({ 
-        status: true,
-        source: `Record from the server`,
-        pollData
+        success: true,
+        data: pollData
       });
     }
     
@@ -112,7 +126,7 @@ router.get('/poll/pollID/:pollID', async (req, res) => {
     console.log(error);
     process.exit();
     return res.status(501).json({
-      status: false,
+      success: false,
       message: "Something went wrong",
     });
   }
@@ -134,14 +148,8 @@ router.put('/poll/:pollID/vote', async (req, res) => {
         });
       } else {
         // Update document
-        Poll.updateOne({ 
-          _id: req.params.poll
-        }, {
-          $inc: {
-            'options.1.count': 1
-          }
-        }, (err, doc) => {
-          if (err){ 
+        Poll.updateOne({ _id: pollID }, { $inc: {'options.1.count': 1} }, (err, doc) => {
+          if (err) { 
             console.log(err);
             return res.status(501).json({
               status: false,
@@ -151,6 +159,8 @@ router.put('/poll/:pollID/vote', async (req, res) => {
             // save the record in the cache for subsequent request
             client.SADD(pollID, req.body.ip);
             client.SMEMBERS(pollID, console.log);
+
+            console.log('updated doc -> ', doc);
 
             // return the result to the client
             return res.status(200).json({
@@ -174,9 +184,20 @@ router.put('/poll/:pollID/vote', async (req, res) => {
 // Endpoint to delete a poll
 router.delete('/poll/:pollID/delete', async (req, res) => {
   try {
-    const pollID = req.params.pollID;
+    const { error } = deletePollDetail.validate(req.body);
+    if (error) {
+      return res.status(401).json({
+        status: false,
+        message: error.details[0].message
+      });
+    }
 
+    const pollID = req.params.pollID;
     await Poll.findByIdAndDelete({ _id: pollID });
+
+    // Update totalPollCreated field in user collection
+    await User.updateOne({ _id: req.body.createdBy }, { $inc: {totalPollCreated: -1} });
+
     return res.status(200).json({
       status: true,
       message: "Successfully deleted item!"
@@ -188,6 +209,25 @@ router.delete('/poll/:pollID/delete', async (req, res) => {
       message: "Document could not be deleted or does not exist."
     });
   }
+});
+
+
+// Endpoint to cast vote
+router.post('/vote', (req, res) => {
+  // pusher.trigger("my-channel", "my-event", {
+  //   points: 1,
+  //   os: req.body.os
+  // });
+
+  pusher.trigger("os-poll", "os-vote", {
+    points: 1,
+    os: req.body.os
+  });
+  
+  return res.status(200).json({
+    success: true,
+    message: "Thanks for voting."
+  });
 });
 
 
